<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="chat">Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="messages">Messages</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="input_field_hint">Ask a question</string>
    <string name="copy_message">Copy message</string>
    <string name="copy_messages">Copy messages</string>
    <string name="share_message">Share message</string>
    <string name="share_messages">Share messages</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_messages">Delete messages</string>
    <string name="delete_messages_confirmation">Do you want to delete the selected messages?</string>
    <string name="user">User</string>
    <string name="bot">Bot</string>
    <string name="speaker">Speaker</string>
    <string name="text">Text</string>
    <string name="generate_text">Generate text</string>
    <string name="image">Image</string>
    <string name="generate_image">Generate image</string>
    <string name="image_download_description">Downloading generated images…</string>
    <string name="view_images">View images</string>
    <string name="download_images">Download images</string>
    <string name="onboarding_text0">Hi! I\'m Chatty AI bot. There are several things I can do for you:</string>
    <string name="onboarding_text1">Text generation. I can tell you a story, help with an essay, and much more.</string>
    <string name="onboarding_text2">Picture generation. Just type in what you want to see and I will generate it.</string>
    <string name="onboarding_text3">To switch between text and picture generator use menu</string>
    <string name="onboarding_text4">Type me something to get started :)</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="onboarding_page1_title">Screen reader</string>
    <string name="onboarding_page1_subtitle">Click the speaker icon to enable or disable screen reader mode</string>
    <string name="onboarding_page2_title">Generate picture and text</string>
    <string name="onboarding_page2_subtitle">Use menu to switch between text and picture generator</string>
</resources>