<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.chat.ui.views.MicrophoneButton
            android:id="@+id/microphone_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_chat_input_field">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:paddingStart="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAppearance="?textAppearanceBody1"
                android:textColor="?colorOnSurface"
                android:textColorHint="@color/input_hint"
                android:textSize="18sp"
                android:inputType="textMultiLine"
                android:imeOptions="actionSend"
                android:includeFontPadding="false"
                android:gravity="start|center_vertical"
                android:hint="@string/input_field_hint"
                android:background="@null"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/message_type_chooser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_message_type_chooser_24"/>
        </LinearLayout>

        <com.chat.ui.views.SendButton
            android:id="@+id/send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_type_chooser_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/generate_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/text"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/message_type_text_color"
            android:background="@drawable/bg_message_type_button"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/generate_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/image"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/message_type_text_color"
            android:background="@drawable/bg_message_type_button"/>
    </LinearLayout>
</LinearLayout>